objects/nFORCE__Route_Agreement__c.object
<CustomObject>
    <description>The Route Agreement object records the agreement to a Terms and Conditions document displayed on the specified route.</description>
    <fields>
        <fullName>LLC_BI__Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The application field is a lookup to Application so we can relate a terms agreement instance to its application</description>
        <label>Application</label>
        <referenceTo>LLC_BI__Application__c</referenceTo>
        <relationshipLabel>Route Agreements</relationshipLabel>
        <relationshipName>Route_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional lookup field with the loan id associated with the route agreement.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Route Agreements</relationshipLabel>
        <relationshipName>Route_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Agreed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional, admin-facing field stores whether the user has accepted the Terms and Conditions displayed on a particular route. The value is true if the user accepted the terms. The value is false if the user did not accept the terms.</description>
        <inlineHelpText>Select this checkbox if you accept the terms outlined in the document.</inlineHelpText>
        <label>Agreed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Agreement_Date__c</fullName>
        <description>The date on which the user agreed to these terms.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agreement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nFORCE__Route_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This optional, admin-facing field maps to a particular record which defines which document has been agreed to by the loan officer&apos;s customer and on which route that document lives.</description>
        <label>Route Terms</label>
        <referenceTo>nFORCE__Route_Terms__c</referenceTo>
        <relationshipLabel>Route Agreements</relationshipLabel>
        <relationshipName>Route_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This optional, admin-facing field maps the document to the user who has agreed to the terms.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Route Agreements</relationshipLabel>
        <relationshipName>Route_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Route Agreement</label>
    <listViews>
        <fullName>nFORCE__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RT{0000}</displayFormat>
        <label>Route Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>